tests/errors/deque_push_back_nonref.ptt
use std/deque

touch(d Deque of int) {
  d.push_back(1)
}

spark {
  d is Deque of int()
  touch(d)
}
